Check for null values, use "isBlank" to validate